--- a/Beitak/res/layout/single_item.xml
+++ b/Beitak/res/layout/single_item.xml
@@ -4,21 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <yoprod.beitak.main.CardsLayoutAnimation
+    <yoproduction.beitak.main.CardsLayoutAnimation
         android:id="@+id/CardsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#e3e3e3"
         android:orientation="vertical" >
         
-		<RelativeLayout
-			android:id="@+id/relativeView"
-			style="@style/nowCardStyle"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:clickable="true"
-			android:onClick="ClickCardButton" >
-		 	
+		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal" 
+		    android:id="@+id/relativeView"
+			style="@style/nowCardStyle" 
+			android:onClick="ClickCardButton" 
+			android:weightSum="1.0">
+			 	
 		    <ImageView
 		        android:id="@id/my_item_image"
 		        android:contentDescription="@string/hello_world"
@@ -29,49 +30,54 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_alignParentLeft="true"
-		        android:layout_alignParentTop="true" />
-
-		    <TextView
-		        android:id="@id/my_item_title"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignParentTop="true"
-		        android:layout_marginLeft="21dp"
-		        android:layout_toRightOf="@id/my_item_image"
-		        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-		    <TextView
-		        android:id="@id/my_item_desc"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignLeft="@id/my_item_title"
-		        android:layout_below="@id/my_item_title"
-		        android:textAppearance="?android:attr/textAppearanceMedium" />
+		        android:layout_alignParentTop="true" 
+		        android:layout_weight="0.1" />
 		
-		    <TextView
-		        android:id="@id/my_item_price"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignLeft="@id/my_item_title"
-		        android:layout_below="@id/my_item_desc"
-		        android:textAppearance="?android:attr/textAppearanceMedium" />
+		    <LinearLayout 
+		        android:layout_width="match_parent"
+				android:layout_height="wrap_content" 
+				android:layout_alignParentLeft="true"
+		        android:layout_alignParentTop="true" 
+		        android:orientation="vertical" 
+		        android:layout_weight="0.5">
+			    
+			    <TextView
+			        android:id="@id/my_item_title"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_alignParentTop="true"
+			        android:layout_toRightOf="@id/my_item_image"
+			        android:textAppearance="?android:attr/textAppearanceLarge" />
 		
-		    <TextView
-		        android:id="@id/my_item_date_posted"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignParentRight="true"
-		        android:layout_alignParentTop="true"
-		        android:textAppearance="?android:attr/textAppearanceSmall" />
+			    <TextView
+			        android:id="@id/my_item_desc"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_alignLeft="@id/my_item_title"
+			        android:layout_below="@id/my_item_title"
+			        android:textAppearance="?android:attr/textAppearanceMedium" />
+			
+			    <TextView
+			        android:id="@id/my_item_price"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_alignLeft="@id/my_item_title"
+			        android:layout_below="@id/my_item_desc"
+			        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-		    <TextView
-		        android:id="@id/my_item_time_posted"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignRight="@id/my_item_date_posted"
-		        android:layout_below="@id/my_item_date_posted"
-		        android:textAppearance="?android:attr/textAppearanceSmall" />
-		    
-		 </RelativeLayout>
-	</yoprod.beitak.main.CardsLayoutAnimation>
+			    <TextView
+			        android:id="@id/my_item_date_posted"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+			    <TextView
+			        android:id="@id/my_item_time_posted"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+		    </LinearLayout>
+		 </LinearLayout>
+	</yoproduction.beitak.main.CardsLayoutAnimation>
 </LinearLayout>
